--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/lab": "^6.0.0-beta.31",
+    "@mui/material": "^6.4.8",
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
+    "file-saver": "^2.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lazy-load-image-component": "^1.6.3",
+    "react-router-dom": "^7.4.0",
+    "styled-components": "^6.1.16",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
